--- a/css/services_segment.css
+++ b/css/services_segment.css
@@ -1,6 +1,7 @@
 /*Services segment*/
 .services-segment {
-    margin: 10vh 60px 10vh 60px;
+    margin: 2vh 60px 10vh 60px;
+    padding-top: 10vh;
 }
 
 .services-segment .title {
